Fixed link color to more contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@
 :root {
     --primary-color: #0D0911;
     --secondary-color: #FFFFFF;
-    --accent-color: #453750;
+    --accent-color: #3A2C44;
     --hover-color: #8169AB;
     --border-color: #a393bf;
     --header-height: 152px;
